fixed styling for image on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -140,7 +140,12 @@ body {
         margin-bottom: 1rem;
     }
 
+    .mobile-img-div {
+        margin: auto;
+    }
+
     .showcase-right-col {
+        margin-top: 1rem;
         flex-direction: column;
         justify-content: center;
         align-items: center;
